rgbds-0.6.1/test/asm/align-large-ofs.err
error: align-large-ofs.asm(2):
    Alignment offset (2) must be smaller than alignment size (2)
error: Assembly aborted (1 error)!
