rgbds-0.6.1/test/asm/align-large-ofs.asm

SECTION "Tesst", ROM0, ALIGN[1,2]
